# fraud-sentinel

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  Makefile  PRD.md  README.md  benchmark_report.json  pyproject.toml
config/: dashboard.yaml  okf.yaml  pipeline.yaml  rules.yaml
dashboard/: __init__.py  app.py  common.py  data.py  duckdb_table_viewer.py
dashboard/pages/: 1_Overview.py  2_Alerts.py  3_Account_Investigation.py  4_Network_Explorer.py  5_OKF_Knowledge_Bundle.py  6_Monitoring.py
docs/superpowers/plans/: 2026-06-22-phase-0-1-initialization.md  2026-06-22-phase-2-data-pipeline.md  2026-06-22-phase-3-features-scoring.md  2026-06-22-phase-4-graph-clusters.md  2026-06-22-phase-5-okf-export-validation.md  (+4 more)
scripts/: benchmark.sh  demo_monitor_delta.sh  demo_run.sh  demo_setup.sh
slides/: fraud-sentinel-90min-walkthrough.md  fraud-sentinel_keynote_pragma_gap_analysis_june_2026.md  fraud-sentinel_pragma_alignment_gap_analysis.md
src/fraud_demo/: __init__.py  __main__.py  alerts.py  benchmarking.py  cli.py  clusters.py  config.py  duckdb_viewer.py  features.py  generate_data.py  graph_builder.py  ingest.py  logging.py  manifests.py  monitoring.py  okf_exporter.py  okf_validator.py  privacy.py  profile.py  scoring.py
tests/: test_alerts.py  test_benchmarking.py  test_cli.py  test_clusters.py  test_config.py  test_dashboard.py  test_duckdb_viewer.py  test_features.py  test_generate_data.py  test_graph_builder.py  test_ingest.py  test_monitoring.py  test_okf_exporter.py  test_okf_validator.py  test_profile.py  test_scaffold.py  test_scoring.py
(+13 files in other folders)
